Add 80% complete explore notebook, and 10% clean

--- a/notebooks/clean.ipynb
+++ b/notebooks/clean.ipynb
@@ -1,12 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "179ca94a-5ed5-4ba0-82cf-e78848167263",
+   "metadata": {},
+   "source": [
+    "# Clean our dataset: Facebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c314e6b4-ba4a-4b7f-a0e0-70bd852df937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels as sm\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "788177d4-1033-4575-ba93-bb348fc6e77a",
+   "metadata": {},
+   "source": [
+    "## Column 1 - Type\n",
+    "\n",
+    "`df.info()` said that this column is a string to we'll have to process in into a numeric. `pd.get_dummies()` will help us with that task."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d0e64fac-610d-419b-9545-a4d93905a1ab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "display(df['Type'].value_counts())\n",
+    "df[['Type_p', 'Type_s', 'Type_v']] = pd.get_dummies(df['Type'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e479e72-f07b-4349-8535-833ee95e8395",
+   "metadata": {},
+   "source": [
+    "## Column 2 Category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c4af6c-0e0a-4102-b875-01c5163e71fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df['Category'].value_counts())\n",
+    "df[['Category_act', 'Category_prod']] = pd.get_dummies(df['Category'], drop_first=True)"
+   ]
   }
  ],
  "metadata": {
