--- a/notebooks/explore.ipynb
+++ b/notebooks/explore.ipynb
@@ -1,12 +1,520 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8d2034e7-88e3-4e8a-85c3-8680ac9fda80",
+   "metadata": {},
+   "source": [
+    "# Explore our dataset: Facebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "397e5828-67ad-47b9-a607-f380bb122274",
+   "id": "34bbc13a-cfb8-4f44-bdb6-797d6c35cb4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels as sm\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7572dc1-be2e-42b4-a591-6a2487b2f9b6",
+   "metadata": {},
+   "source": [
+    "## Read data into a DataFrame\n",
+    "\n",
+    "* Looks like CSV is separated by colons instead of commas.\n",
+    "* Let's adjust our `pd.read_csv()` call."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "912484ac-3b20-4e22-81fe-073363c17385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/facebook.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "798614e8-f7de-4fa9-9a5a-15febc136849",
+   "metadata": {},
+   "source": [
+    "* Much better now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d945db-57ac-406d-8dc5-ba5e503cd4b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/facebook.csv', delimiter=';')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fb6aebe-962f-4050-a383-e76f12e7f558",
+   "metadata": {},
+   "source": [
+    "## Helpful definitions related the social media marketing\n",
+    "\n",
+    "Given that this dataset is focused on social media marketing and includes jargon specific to that field, I found it helpful to look up the following definitions. The research paper also had the following figure which confirmed these definitions.\n",
+    "\n",
+    "* **Reach** is \"a metric that represents the number of unique people that were exposed and saw a piece of social media content.\" ([source: buffer.com][1])\n",
+    "* **Impressions** \"refer to the number of times your social media content is displayed on someone’s screen.\" ([source: buffer.com][2])\n",
+    "* **Engagement** is \"the total number of likes, comments, shares, and other interactions.\" ([source: buffer.com][3])\n",
+    "* **Comsumers** and **Consumptions** refer to \"the process by which individuals engage with various forms of media.\" ([source: fivable.me][4])\n",
+    "\n",
+    "![image](../docs/3-Table2-1.png)\n",
+    "\n",
+    "[1]: https://buffer.com/social-media-terms/reach\n",
+    "[2]: https://buffer.com/social-media-terms/impressions\n",
+    "[4]: https://buffer.com/social-media-terms/engagement-rate\n",
+    "[3]: https://fiveable.me/key-terms/media-literacy/media-consumption"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea9d1550-8a15-4f10-b59b-952daf3cd0d7",
+   "metadata": {},
+   "source": [
+    "## Check for missing or incorrectly formatted data\n",
+    "\n",
+    "### Missing data\n",
+    "* From `df.info()`, it looks like three columns have tiny bit of missing data.\n",
+    "* Those columns are: 'paid', 'like', and 'share'.\n",
+    "\n",
+    "### Incorrectly formatted data\n",
+    "* The 'Type' column is a string, which means it's haven't to pre-processed into something numeric (like through `pd.get_dummies()`.\n",
+    "* The 'Category' column is an integer that is coded to mean one of three different post categories, which means we'll want to pre-process it too."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16dd68f0-d560-4c96-8263-5a5bf447705d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d3ceab2-0b0a-4afd-afcb-47f07fb147e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Examine descriptive statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c498ad50-3497-4ea0-b4e9-edb497012da3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_and_plot_descriptive(df, cols, rotation=0):\n",
+    "    display(df[cols].describe())\n",
+    "    df[cols].plot.box()\n",
+    "    plt.xticks(rotation=rotation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be4ef2c1-2074-4dfa-9cac-04cf7b1eb30d",
+   "metadata": {},
+   "source": [
+    "### Column 0 - Page total likes\n",
+    "\n",
+    "The `Page total likes` column tells us that we dealing with posts on pages that have a minimum of 81K likes and up to 139K likes. That observation confirms that we're looking at data a relatively popular cosmetics brand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65a6819-5b84-450f-8d9a-f613d413c63b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_and_plot_descriptive(df, ['Page total likes'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9652a6b3-2e48-450c-8396-d1546de45521",
+   "metadata": {},
+   "source": [
+    "### Column 1 - Type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0515173b-677e-45e8-8652-11c477af60ca",
+   "metadata": {},
+   "source": [
+    "Because `Type` is a categorial variable, we can't compute the mean, standard deviation, or other descriptive statistics, but we can look at the percent breakdown of values using `df.value_counts()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "596324af-4a39-4bb0-a8fa-9a728877b2d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_breakdown = df['Type'].value_counts() / 500 * 100\n",
+    "type_breakdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec890fef-a179-43f2-90e1-c8f01b78481e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = type_breakdown.plot.pie(autopct='%1.1f%%')\n",
+    "_ = plt.title('Post type breakdown')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a205155a-0179-4198-a801-1c83d71cd6d8",
+   "metadata": {},
+   "source": [
+    "### Column 2 - Category\n",
+    "\n",
+    "The `Category` column is another categorical variable, so we'll compute the value counts and plot the breakdown. As shown in the plot, there are three categories and the research paper indentified them as the different type of advertizing strategy, such as action, product, and inspiration. The following figure from the research paper provides more context.\n",
+    "\n",
+    "![Figure](../docs/4-Table3-1.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ced66183-24a6-4eef-82b9-b87a8b4a8e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_breakdown = df['Category'].value_counts().sort_index()\n",
+    "category_breakdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a05fa41a-692d-46e4-90d3-ead23e1f2de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = category_breakdown.plot.pie(labels=['Action', 'Product', 'Inspiration'], autopct='%1.1f%%')\n",
+    "_ = plt.title('Post category breakdown')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7753645-9542-4313-8414-b5898b68276f",
+   "metadata": {},
+   "source": [
+    "### Column 3-5 - Post month, post weekday, post hour\n",
+    "\n",
+    "Of the datetime columns\n",
+    "\n",
+    "* `Post Month` and `Post Weekday` look like they have a normal range (1-12 and 1-7).\n",
+    "* `Post Hour` looks a little strange because the range (1-23) is missing an hour.\n",
+    "* This `df.describe()` and `df.value_counts()` output strongly suggests that there is a data quality issue with `Post Hour`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb8209cb-0753-4fd9-a6c4-881da2d993c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_and_plot_descriptive(df, ['Post Month', 'Post Weekday', 'Post Hour'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf1f04ed-0d50-483b-95c2-291b046bc02f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Post Hour'].value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4f073da-413f-4d01-91e2-ad6358b2accc",
+   "metadata": {},
+   "source": [
+    "### Column 6 - Paid\n",
+    "\n",
+    "The `Paid` column is a binary variable, where 0 means the company didn't pay Facebook to advertise the post, and 1 means they did pay. Our `df.describe()` and `df.value_counts()`shows 72% of the posts in the dataset were unpaid and 28% were paid."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43adf6c9-0080-441b-b398-8c8c2ec8b3b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Paid'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f30c7b09-c50a-4d6c-b8ab-404ecb7addb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Paid'].value_counts() / 499 * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cb2cfdc-ca9b-425d-b09e-12b59fd9cca9",
+   "metadata": {},
+   "source": [
+    "### Column 7, 8, 12, 13 - Impressions and reach\n",
+    "\n",
+    "As shown in the output from `df.describe()`,\n",
+    "\n",
+    "* There is the expected dropoff in magnitude of impressions/reach when comparing the whole population to just the subgroup of people who have liked the page.\n",
+    "* Reach ranges from 238 to 180,480 for the total group, whereas the reach by that subgroup is from 236 to 51,456.\n",
+    "* Impressions ranges from 5.7e+02 to 1.1e+06 for the total group, whereas for subgroup it's from 5.7e+02 to 1.1e+06.\n",
+    "\n",
+    "As far as variance goes,\n",
+    "\n",
+    "* For reach, the standard deviation for the total group is much greater than that of the subgroup (22,740 vs 7,682).\n",
+    "* For impressions, the standard deviation for the total group and subgroup are relatively similiar (7.7+04 vs 6.0+04).\n",
+    "\n",
+    "The box plots show that the impressions/reach data isn't normally distributed, so we'll try to visualize it differently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8791267-2df0-4be4-aeba-408847c3c758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_and_plot_descriptive(df, [\n",
+    "    'Lifetime Post Total Reach',\n",
+    "    'Lifetime Post Total Impressions',\n",
+    "    'Lifetime Post Impressions by people who have liked your Page',\n",
+    "    'Lifetime Post reach by people who like your Page'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e3b7a47-3b8e-4645-ada3-548b7111a73b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_impress_reach_hist(df, col, num_of_bins=30):\n",
+    "    num_of_records = df[[col]].shape[0]\n",
+    "    col_max = np.ceil(df[col].max())\n",
+    "    bins = np.linspace(0, col_max, num_of_bins)\n",
+    "    df2 = pd.DataFrame({\n",
+    "        col: df[col],\n",
+    "        'bin': pd.cut(df[col], bins=bins)\n",
+    "    })\n",
+    "\n",
+    "    fig = plt.figure(figsize=(6, 4))\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    df2.hist(ax=ax, bins=num_of_bins)\n",
+    "    ax.text(\n",
+    "        0.7,\n",
+    "        0.7,\n",
+    "        s=f'# of bins: {num_of_bins}',\n",
+    "        transform=ax.transAxes,\n",
+    "        horizontalalignment='left',\n",
+    "        verticalalignment='center'\n",
+    "    )\n",
+    "    ax.text(\n",
+    "        0.7,\n",
+    "        0.6,\n",
+    "        s=f'# of records: {num_of_records}',\n",
+    "        transform=ax.transAxes,\n",
+    "        horizontalalignment='left',\n",
+    "        verticalalignment='center'\n",
+    "    )\n",
+    "    ax.set_xlabel(col)\n",
+    "    ax.set_ylabel('Frequency')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca4e5c8-f14d-4319-820e-719d58b57519",
+   "metadata": {},
+   "source": [
+    "Plotting histograms of the reach/impression columns shows:\n",
+    " \n",
+    " * A distribution that heavily skewed to the right with an overwhelming major of posts within the smallest bins. After the smallest bin there is a steep dropoff in posts, that drags on for more than of the total number of bins.\n",
+    " * If there was more data, it is possible that the distribution is right skewed normal, but for now, it's appears to follow a Poisson distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a42ca29-8efd-42a7-a9bf-a8ec876449a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_impress_reach_hist(df, 'Lifetime Post Total Reach', num_of_bins=20)\n",
+    "plot_impress_reach_hist(df, 'Lifetime Post Total Impressions', num_of_bins=50)\n",
+    "plot_impress_reach_hist(df, 'Lifetime Post Impressions by people who have liked your Page', num_of_bins=50)\n",
+    "plot_impress_reach_hist(df, 'Lifetime Post reach by people who like your Page', num_of_bins=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f52ddf1a-3d0f-4595-876c-e62332d44a87",
+   "metadata": {},
+   "source": [
+    "### Column 9 - Engagement and consumption\n",
+    "\n",
+    "From `df.describe()` we see that:\n",
+    "\n",
+    "* The mean number of `Engaged Users` (920) is larger than the mean number of `Consumers` (798).\n",
+    "* The range for `Engaged Users` (9 to 11.4K) is similar in size the that of `Consumers` (9 to 11.3K). This is a bit odd given that the definition of engaged users is the number of unique consumers, whereas consumers can contain repetitions, and yet we see in this dataset more engaged users than consumers. This observation may be a sign of a data quality issue.\n",
+    "* The mean of `Consumptions` > `Engaged Users` > `Consumers`, as expected because one user can consume a post multiple times, each time counting as another consumption."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a831ab0e-21b3-4331-a0ca-50300fba4e95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_and_plot_descriptive(df, [\n",
+    "    'Lifetime Engaged Users',\n",
+    "    'Lifetime Post Consumers',\n",
+    "    'Lifetime Post Consumptions'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a7ddb68-eaa1-44a8-a51f-e9cbb61de7b6",
+   "metadata": {},
+   "source": [
+    "### Column 14 - People who have liked your Page and engaged with your post\n",
+    "\n",
+    "As shown in df.describe() here,\n",
+    "\n",
+    "* The mean of `Engaged users` > `People who have liked your Page and engaged with your post`.\n",
+    "* This observation matches our understanding that column 14 is a subset of `Engaged users`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8c1104d-0f8c-4f97-855a-c0d5fa3ca8b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_and_plot_descriptive(df, [\n",
+    "    'Lifetime Engaged Users',\n",
+    "    'Lifetime People who have liked your Page and engaged with your post',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a40032e6-6a9a-4ea9-9387-2b8fbeb5344e",
+   "metadata": {},
+   "source": [
+    "### Column 15-18 - comment, like, share, total interactions\n",
+    "\n",
+    "These first three columns columns show a breakdown and a sum of the ways in which people interacted with the post.\n",
+    "\n",
+    "* The columns in order of increasing magnitude (judged by mean and max) are `Like`, `Comment`, and `Share`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5d58ad3-e4f9-4af4-b9dd-e98cb9efd956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_and_plot_descriptive(df, [\n",
+    "    'comment',\n",
+    "    'like',\n",
+    "    'share',\n",
+    "    'Total Interactions',\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "452eca2e-4c80-4e69-845f-a9ac93a0f738",
+   "metadata": {},
+   "source": [
+    "* By summing together the first three columns, we can see that this sum is identical to the `Total interactions` column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5360e68b-83fb-48f1-b7f5-4f58a8a8e4da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['New total interact'] = df[[\n",
+    "    'comment',\n",
+    "    'like',\n",
+    "    'share']].sum(axis=1)\n",
+    "df[[\n",
+    "    'Total Interactions',\n",
+    "    'New total interact',\n",
+    "]].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebbe67e7-40b8-46f1-ba64-938e46a07d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.corr(df[['like', 'comment', 'share']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4846d508-cfa4-4aab-91d9-e3628a537fae",
+   "metadata": {},
+   "source": [
+    "## Corr plot\n",
+    "\n",
+    "Regularization L1 (Lasso) L2 (Ridge) add a penalty term that shrinks the cooeffecient so that some coeffecients have less sway."
+   ]
   }
  ],
  "metadata": {
